Fix for issue 1504 - taking off scrollbars on dynamic bookmark popup in IE7

--- a/public/stylesheets/ie7_overrides.css
+++ b/public/stylesheets/ie7_overrides.css
@@ -1,4 +1,5 @@
-#dynamic-bookmark #bookmark-form form#new_bookmark dl {height:16em; overflow:scroll;}
+/*#dynamic-bookmark #bookmark-form form#new_bookmark dl {height:16em; 
+overflow:scroll;} */
 
 /* bookmarks index has funny float issues */
 .bookmarks-index .blurb {position: relative;}
